@@ -1,5 +1,5 @@
 /* makeinfo -- convert Texinfo source into other formats.
-   $Id: makeinfo.c,v 1.92 2007/03/18 18:51:08 karl Exp $
+   $Id: makeinfo.c,v 1.93 2007/03/31 22:39:42 karl Exp $
 
    Copyright (C) 1987, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999,
    2000, 2001, 2002, 2003, 2004, 2005, 2006 Free Software Foundation, Inc.
@@ -3362,10 +3362,16 @@ cm_image (int arg)
             if (pathname == NULL) {
               sprintf (fullname, "%s.jpg", name_arg);
               if (access (fullname, R_OK) != 0) {
-                sprintf (fullname, "%s.gif", name_arg);
-                if (access (fullname, R_OK) != 0) {
-                  pathname = get_file_info_in_path (fullname,
-                                               include_files_path, &file_info);
+		  pathname = get_file_info_in_path (fullname,
+						    include_files_path,
+						    &file_info);
+		  if (pathname == NULL) {
+		    sprintf (fullname, "%s.gif", name_arg);
+		    if (access (fullname, R_OK) != 0) {
+		      pathname = get_file_info_in_path (fullname,
+							include_files_path,
+							&file_info);
+		    }
                 }
               }
             }
